# meridian-support-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
public/: index.html
src/: agent.py  config.py  mcp_client.py  prompts.py
tests/: conftest.py  test_agent.py  test_api.py  test_mcp_client.py
